SLIDER-4: Added the JS script for sliders.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,261 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Slider</title>
+  <script src="https://use.fontawesome.com/824963ba31.js"></script>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   
+  <!-- 		Main container -->
+  <div class="main-container">
+    <div class="header-section">
+      <div class="header-container">
+        <ul>
+          <li>
+            <a href="#">Be Informed</a>
+          </li>
+          <li>
+            <a href="#">Plan Ahead</a>
+          </li>
+          <li>
+            <a href="#">Take Action</a>
+          </li>
+          <li>
+            <a href="#">Kids</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- First Slider container -->
+    <div class="slider-container">
+      <div class="cycle-slideshow-1" data-cycle-log="false" data-cycle-speed="800" data-cycle-timeout="5000"
+        data-cycle-sync="true" data-cycle-fx="scrollHorz" data-cycle-slides=".slide-img-1">
+        <div class="slide-img-1 slide-img">
+          <div class="img-people"></div>
+        </div>
+        <div class="slide-img-1 slide-img">
+          <div class="img-grass"></div>
+        </div>
+        <div class="slide-img-1 slide-img">
+          <div class="img-stairs"></div>
+        </div>
+      </div>
+      <div class="button-margin">
+        <div class="button-inner-margin">
+          <a class="arrow arrow-backward-1 arrow-backward" href="#">
+            <div class="btn-arrows-shape prev-button">
+              <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            </div>
+          </a>
+          <a class="arrow arrow-forward-1 arrow-forward" href="#">
+            <div class="btn-arrows-shape next-button">
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="inner-margin">
+        <div class="depth-margin">
+          <div class="inner-cycle-slideshow-1 second-slider" data-cycle-log="false" data-cycle-fx="fade"
+            data-cycle-timeout="5000" data-cycle-speed="800" data-cycle-slides=".slide-1">
+            <div class="slide-1 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 1</h1>
+                  <p>
+                    The first slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide-1 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 2</h1>
+                  <p>
+                    The second slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide-1 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 3</h1>
+                  <p>
+                    The third slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Second Slider container -->
+    <div class="slider-container">
+      <div class="cycle-slideshow-2" data-cycle-log="false" data-cycle-speed="800" data-cycle-timeout="5000"
+        data-cycle-sync="true" data-cycle-fx="scrollHorz" data-cycle-slides=".slide-img-2">
+        <div class="slide-img-2 slide-img">
+          <div class="img-people"></div>
+        </div>
+        <div class="slide-img-2 slide-img">
+          <div class="img-grass"></div>
+        </div>
+        <div class="slide-img-2 slide-img">
+          <div class="img-stairs"></div>
+        </div>
+      </div>
+      <div class="button-margin">
+        <div class="button-inner-margin">
+          <a class="arrow arrow-backward-2 arrow-backward" href="#">
+            <div class="btn-arrows-shape prev-button">
+              <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            </div>
+          </a>
+          <a class="arrow arrow-forward-2 arrow-forward" href="#">
+            <div class="btn-arrows-shape next-button">
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="inner-margin">
+        <div class="depth-margin">
+          <div class="inner-cycle-slideshow-2 second-slider" data-cycle-log="false" data-cycle-fx="fade"
+            data-cycle-timeout="5000" data-cycle-speed="800" data-cycle-slides=".slide-2">
+            <div class="slide-2 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 1</h1>
+                  <p>
+                    The first slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide-2 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 2</h1>
+                  <p>
+                    The second slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide-2 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 3</h1>
+                  <p>
+                    The third slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Third Slider container -->
+    <div class="slider-container">
+      <div class="cycle-slideshow-3" data-cycle-log="false" data-cycle-speed="800" data-cycle-timeout="5000"
+        data-cycle-sync="true" data-cycle-fx="scrollHorz" data-cycle-slides=".slide-img-3">
+        <div class="slide-img-3 slide-img">
+          <div class="img-people"></div>
+        </div>
+        <div class="slide-img-3 slide-img">
+          <div class="img-grass"></div>
+        </div>
+        <div class="slide-img-3 slide-img">
+          <div class="img-stairs"></div>
+        </div>
+      </div>
+      <div class="button-margin">
+        <div class="button-inner-margin">
+          <a class="arrow arrow-backward-3 arrow-backward" href="#">
+            <div class="btn-arrows-shape prev-button">
+              <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            </div>
+          </a>
+          <a class="arrow arrow-forward-3 arrow-forward" href="#">
+            <div class="btn-arrows-shape next-button">
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="inner-margin">
+        <div class="depth-margin">
+          <div class="inner-cycle-slideshow-3 second-slider" data-cycle-log="false" data-cycle-fx="fade"
+            data-cycle-timeout="5000" data-cycle-speed="800" data-cycle-slides=".slide-3">
+            <div class="slide-3 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 1</h1>
+                  <p>
+                    The first slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide-3 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 2</h1>
+                  <p>
+                    The second slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide-3 slide">
+              <div class="slide-body">
+                <div class="body-content">
+                  <h1>Slider 3</h1>
+                  <p>
+                    The third slider body content
+                  </p>
+                  <div class="hero-cta">
+                    <a href="www.google.com.mx">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="./js/jquery-3.4.1.js"></script>
   <script src="./js/jquery.cycle2.js"></script>
   <script src="./js/scripts.js"></script>
 </body>
 </html>
+
